--- a/new_pages/gis.Rmd
+++ b/new_pages/gis.Rmd
@@ -959,7 +959,7 @@ getis_ord <- spdep::localG(
 )
 
 # join results to sf data
-sle_adm3_dat$getis_ord <- getis_ord
+sle_adm3_dat$getis_ord <- as.numeric(getis_ord)
 
 # plot map
 ggplot(data=sle_adm3_dat) +
