--- a/new_pages/grouping.Rmd
+++ b/new_pages/grouping.Rmd
@@ -128,7 +128,7 @@ linelist %>%
 
 By default, if you run `group_by()` on data that are already grouped, the old groups will be removed and the new one(s) will apply. If you want to add new groups to the existing ones, include the argument `.add = TRUE`.  
 
-````{r, eval=F}
+```{r, eval=F}
 # Grouped by outcome
 by_outcome <- linelist %>% 
   group_by(outcome)
