--- a/new_pages/pivoting.Rmd
+++ b/new_pages/pivoting.Rmd
@@ -37,6 +37,7 @@ This code chunk shows the loading of packages required for the analyses. In this
 pacman::p_load(
   rio,          # File import
   here,         # File locator
+  kableExtra,   # Build and manipulate complex tables
   tidyverse)    # data management + ggplot2 graphics
 ```
 
