--- a/new_pages/transmission_chains.Rmd
+++ b/new_pages/transmission_chains.Rmd
@@ -335,7 +335,7 @@ plot(
   sub, 
   node_color = "outcome",
   node_shape = "gender",
-  node_size = 'age',
+  node_size = "age",
   col_pal = c(Death = "firebrick", Recover = "green"),
   shapes = c(f = "female", m = "male"),
   size_range = c(40, 60),
